# gutensearch

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  db.Dockerfile  docker-compose.yml  docs-requirements.txt  docs.Dockerfile  mkdocs.yml  pyproject.toml  requirements.txt  schema.sql
docs/: index.md
docs/api/: cli.md  database.md  download.md  parse.md
gutensearch/: __init__.py  cli.py  database.py  download.py  parse.py
