[project]
name = "gutensearch"
version = "0.1.1"
description = "A searchable database and command-line-interface for wordss and documents from Project Gutenberg"
authors = [
    { name = "Yannis Katsaros", email = "yannis@katsaros.io" }
]
license = { text = "GPL-3.0" }
requires-python = ">=3.7"

dependencies = [
    "requests",
    "beautifulsoup4",
    "psycopg2-binary",
]

[project.scripts]
gutensearch = "gutensearch.cli:main"

[tool.uv.build-backend]
module-root = "gutensearch"
data = [
  "gutenberg-index.txt",
]


[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "pylint",
    "ipython",
    "types-requests>=2.31.0.20231231",
    "ruff>=0.12.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
